kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe
spec:
  type: ClusterIP
  selector:
    app: tic-tac-toe
  ports:
    - protocol: TCP
      port: 80 # Internal Cluster Port
      targetPort: 80
